Feat: buyer_seller_signup_login #62 (#140)
* Feat: mainActivity firebase 연결 #62

mainActivity firebase 연결

* Fix: navigation_graph 렉 완화 #62

navigation_graph 렉 완화, bottomNavigation id 수정

* Feat: Signup Buyer #62

SignupBuyer 기능

* Feat: Signup, login #62

SignupBuyer, SignupSeller, login 기능 추가

* Feat: login, logout #62

login, logout 기능 추가

* Feat: login, logout #62

login, logout 기능 추가

--- a/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
@@ -61,7 +61,7 @@
                         android:id="@+id/editinput_signup_seller_registration_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업자등록번호"
+                        android:hint="사업자등록번호 ( 01 - 000 - 0000 )"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -110,7 +110,7 @@
                         android:id="@+id/editinput_signup_seller_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="비밀번호"
+                        android:hint="비밀번호 (공백 제외, 6 ~ 15 자)"
                         android:inputType="textPassword"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -161,7 +161,7 @@
                         android:id="@+id/editinput_signup_seller_business_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업장 전화번호"
+                        android:hint="사업장 전화번호 ( 010 - 0000 - 0000 )"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -194,7 +194,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="4dp"
-                        android:text="등록증.pdf"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="14dp"
                         android:layout_below="@+id/textview_signup_seller_text"/>
