--- a/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
+++ b/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
@@ -11,19 +11,20 @@
         android:id="@+id/categoryFragment"
         android:enabled="true"
         android:icon="@drawable/menu_24px"
-        android:title="카테고리"
-        />
+        android:title="카테고리"/>
+
     <item
         android:id="@+id/orderFragment"
         android:enabled="true"
         android:icon="@drawable/local_shipping_24px"
-        android:title="주문/배송"
-        />
+        android:title="주문/배송"/>
+
     <item
         android:id="@+id/wishListFragment"
         android:enabled="true"
         android:icon="@drawable/favorite_24px"
         android:title="찜" />
+
     <item
         android:id="@+id/buyerMypageFragment"
         android:enabled="true"
