--- a/agijagi/app/src/main/res/layout/fragment_signup_select.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_select.xml
@@ -57,10 +57,12 @@
                 android:orientation="vertical"
                 android:layout_marginStart="104dp"
                 android:layout_marginEnd="104dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:background="@drawable/signup_box_rounded_selected_button"
                 android:layout_centerHorizontal="true">
 
-                <androidx.appcompat.widget.AppCompatImageButton
+                <ImageView
                     android:id="@+id/button_signup_select_seller"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -69,7 +71,6 @@
                     android:src="@drawable/outline_storefront_24_nomal"
                     android:layout_margin="28dp"
                     android:adjustViewBounds="true"
-                    android:background="@color/jagi_ivory"
                     android:scaleType="fitCenter" />
             </LinearLayout>
 
@@ -93,18 +94,19 @@
                 android:layout_marginStart="104dp"
                 android:layout_marginEnd="104dp"
                 android:layout_marginTop="24dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:background="@drawable/signup_box_rounded_selected_button"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/textview_signup_select_seller">
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/button_signup_buyer_buyer"
+                <ImageView
+                    android:id="@+id/button_signup_select_buyer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/outline_person_outline_24_nomal"
                     android:layout_margin="28dp"
                     android:adjustViewBounds="true"
-                    android:background="@color/jagi_ivory"
                     android:scaleType="fitCenter" />
             </LinearLayout>
 
