--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -41,8 +41,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="likelion.project.agijagi.search.SearchFragment"
-        android:label="fragment_search"
-        tools:layout="@layout/fragment_search" >
+        android:label="fragment_search">
         <action
             android:id="@+id/action_searchFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -62,8 +61,7 @@
     <fragment
         android:id="@+id/orderFragment"
         android:name="likelion.project.agijagi.order.OrderFragment"
-        android:label="fragment_order"
-        tools:layout="@layout/fragment_order" >
+        android:label="fragment_order">
         <action
             android:id="@+id/action_orderFragment_to_deliveryTrackingFragment"
             app:destination="@id/deliveryTrackingFragment" />
@@ -75,7 +73,7 @@
         android:id="@+id/paymentFragment"
         android:name="likelion.project.agijagi.purchase.PaymentFragment"
         android:label="fragment_payment"
-        tools:layout="@layout/fragment_payment" >
+        >
         <action
             android:id="@+id/action_paymentFragment_to_purchaseCompleteFragment"
             app:destination="@id/purchaseCompleteFragment" />
@@ -95,7 +93,7 @@
         android:id="@+id/customProductDetailFragment"
         android:name="likelion.project.agijagi.product.CustomProductDetailFragment"
         android:label="fragment_custom_product_detail"
-        tools:layout="@layout/fragment_custom_product_detail" >
+         >
         <action
             android:id="@+id/action_customProductDetailFragment_to_customOptionFragment"
             app:destination="@id/customOptionFragment" />
@@ -113,7 +111,7 @@
         android:id="@+id/customOptionFragment"
         android:name="likelion.project.agijagi.productoption.CustomOptionFragment"
         android:label="fragment_custom_option"
-        tools:layout="@layout/fragment_custom_option" >
+         >
         <action
             android:id="@+id/action_customOptionFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -128,7 +126,7 @@
         android:id="@+id/productDetailFragment"
         android:name="likelion.project.agijagi.product.ProductDetailFragment"
         android:label="fragment_product_detail"
-        tools:layout="@layout/fragment_product_detail" >
+        >
         <action
             android:id="@+id/action_productDetailFragment_to_readyMadeOptionFragment"
             app:destination="@id/readyMadeOptionFragment" />
@@ -149,7 +147,7 @@
         android:id="@+id/readyMadeOptionFragment"
         android:name="likelion.project.agijagi.productoption.ReadyMadeOptionFragment"
         android:label="fragment_ready_made_option"
-        tools:layout="@layout/fragment_ready_made_option" >
+        >
         <action
             android:id="@+id/action_readyMadeOptionFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -164,7 +162,7 @@
         android:id="@+id/shoppingListFragment"
         android:name="likelion.project.agijagi.shopping.ShoppingListFragment"
         android:label="fragment_shopping_list"
-        tools:layout="@layout/fragment_shopping_list" >
+        >
         <action
             android:id="@+id/action_shoppingListFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -200,7 +198,7 @@
         android:id="@+id/sellerProductDetailFragment"
         android:name="likelion.project.agijagi.sellermypage.SellerProductDetailFragment"
         android:label="fragment_seller_product_detail"
-        tools:layout="@layout/fragment_seller_product_detail" >
+        >
         <action
             android:id="@+id/action_sellerProductDetailFragment_to_productUpdateFragment"
             app:destination="@id/productUpdateFragment" />
@@ -212,7 +210,7 @@
         android:id="@+id/productDetailPreviewFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductDetailPreviewFragment"
         android:label="fragment_product_detail_preview"
-        tools:layout="@layout/fragment_product_detail_preview" >
+        >
         <action
             android:id="@+id/action_productDetailPreviewFragment_to_productListFragment"
             app:destination="@id/productListFragment" />
@@ -223,8 +221,7 @@
     <fragment
         android:id="@+id/productListFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductListFragment"
-        android:label="fragment_product_list"
-        tools:layout="@layout/fragment_product_list" >
+        android:label="fragment_product_list">
         <action
             android:id="@+id/action_productListFragment_to_sellerProductDetailFragment"
             app:destination="@id/sellerProductDetailFragment" />
@@ -238,8 +235,7 @@
     <fragment
         android:id="@+id/productUpdateFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductUpdateFragment"
-        android:label="fragment_product_update"
-        tools:layout="@layout/fragment_product_update" >
+        android:label="fragment_product_update">
         <action
             android:id="@+id/action_productUpdateFragment_to_productDetailPreviewFragment"
             app:destination="@id/productDetailPreviewFragment" />
@@ -247,8 +243,7 @@
     <fragment
         android:id="@+id/purchaseCompleteFragment"
         android:name="likelion.project.agijagi.purchase.PurchaseCompleteFragment"
-        android:label="fragment_purchase_complete"
-        tools:layout="@layout/fragment_purchase_complete" >
+        android:label="fragment_purchase_complete">
         <action
             android:id="@+id/action_purchaseCompleteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -257,7 +252,7 @@
         android:id="@+id/deliveryTrackingFragment"
         android:name="likelion.project.agijagi.deliverytracking.DeliveryTrackingFragment"
         android:label="fragment_delivery_tracking"
-        tools:layout="@layout/fragment_delivery_tracking" >
+        >
         <action
             android:id="@+id/action_deliveryTrackingFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
@@ -267,8 +262,7 @@
     <fragment
         android:id="@+id/categoryFragment"
         android:name="likelion.project.agijagi.category.CategoryFragment"
-        android:label="fragment_category"
-        tools:layout="@layout/fragment_category" >
+        android:label="fragment_category">
         <action
             android:id="@+id/action_categoryFragment_to_orderMadeCategoryFragment"
             app:destination="@id/orderMadeCategoryFragment" />
@@ -282,8 +276,7 @@
     <fragment
         android:id="@+id/orderMadeCategoryFragment"
         android:name="likelion.project.agijagi.category.OrderMadeCategoryFragment"
-        android:label="fragment_order_made_category"
-        tools:layout="@layout/fragment_order_made_category" >
+        android:label="fragment_order_made_category">
         <action
             android:id="@+id/action_orderMadeCategoryFragment_to_categoryFragment"
             app:destination="@id/categoryFragment" />
@@ -298,7 +291,7 @@
         android:id="@+id/productAddFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductAddFragment"
         android:label="fragment_product_add"
-        tools:layout="@layout/fragment_product_add" >
+         >
         <action
             android:id="@+id/action_productAddFragment_to_productDetailPreviewFragment"
             app:destination="@id/productDetailPreviewFragment" />
@@ -309,11 +302,14 @@
     <fragment
         android:id="@+id/buyerMypageFragment"
         android:name="likelion.project.agijagi.buyermypage.BuyerMypageFragment"
-        android:label="fragment_buyer_mypage"
-        tools:layout="@layout/fragment_buyer_mypage" >
+        android:label="fragment_buyer_mypage">
         <action
             android:id="@+id/action_buyerMypageFragment_to_shippingManagementFragment"
             app:destination="@id/shippingManagementFragment" />
+        <action
+            android:id="@+id/action_buyerMypageFragment_to_loginFragment"
+            app:destination="@id/loginFragment"/>
+
         <action
             android:id="@+id/action_buyerMypageFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -343,43 +339,27 @@
             app:destination="@id/chattingListFragment" />
     </fragment>
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="likelion.project.agijagi.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_loginFragment_to_signupSelectFragment2"
-            app:destination="@id/signupSelectFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_sellerMypageFragment"
-            app:destination="@id/sellerMypageFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/signupSellerFragment"
-        android:name="likelion.project.agijagi.signup.SignupSellerFragment"
-        android:label="fragment_google_signup_buyer"
-        tools:layout="@layout/fragment_google_signup_buyer" >
-        <action
-            android:id="@+id/action_signupSellerFragment_to_signupSelectFragment"
-            app:destination="@id/signupSelectFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/signupSelectFragment"
         android:name="likelion.project.agijagi.signup.SignupSelectFragment"
         android:label="fragment_signup_select"
         tools:layout="@layout/fragment_signup_select" >
         <action
-            android:id="@+id/action_signupSelectFragment_to_signupSellerFragment"
-            app:destination="@id/signupSellerFragment" />
-        <action
             android:id="@+id/action_signupSelectFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_signupSelectFragment_to_signupBuyerFragment"
+            app:destination="@id/signupBuyerFragment" />
+        <action
+            android:id="@+id/action_signupSelectFragment_to_signupSellerFragment"
+            app:destination="@id/signupSellerFragment" />
     </fragment>
     <fragment
         android:id="@+id/sellerMypageFragment"
         android:name="likelion.project.agijagi.sellermypage.SellerMypageFragment"
-        android:label="fragment_seller_mypage"
-        tools:layout="@layout/fragment_seller_mypage" >
+        android:label="fragment_seller_mypage">
+        <action
+            android:id="@+id/action_sellerMypageFragment_to_loginFragment"
+            app:destination="@+id/loginFragment"/>
         <action
             android:id="@+id/action_sellerMypageFragment_to_productListFragment"
             app:destination="@id/productListFragment" />
@@ -425,8 +405,7 @@
     <fragment
         android:id="@+id/storeManagementFragment"
         android:name="likelion.project.agijagi.sellermypage.StoreManagementFragment"
-        android:label="fragment_store_management"
-        tools:layout="@layout/fragment_store_management" >
+        android:label="fragment_store_management">
         <action
             android:id="@+id/action_storeManagementFragment_to_sellerMypageFragment"
             app:destination="@id/sellerMypageFragment" />
@@ -434,8 +413,7 @@
     <fragment
         android:id="@+id/shippingManagementFragment"
         android:name="likelion.project.agijagi.buyermypage.ShippingManagementFragment"
-        android:label="fragment_shipping_management"
-        tools:layout="@layout/fragment_shipping_management" >
+        android:label="fragment_shipping_management">
         <action
             android:id="@+id/action_shippingManagementFragment_to_buyerMypageFragment"
             app:destination="@id/buyerMypageFragment" />
@@ -452,8 +430,7 @@
     <fragment
         android:id="@+id/shippingAddFragment"
         android:name="likelion.project.agijagi.buyermypage.ShippingAddFragment"
-        android:label="fragment_shipping_add"
-        tools:layout="@layout/fragment_shipping_add" >
+        android:label="fragment_shipping_add">
         <action
             android:id="@+id/action_shippingAddFragment_to_shippingManagementFragment"
             app:destination="@id/shippingManagementFragment" />
@@ -461,8 +438,7 @@
     <fragment
         android:id="@+id/profileManagementFragment"
         android:name="likelion.project.agijagi.buyermypage.ProfileManagementFragment"
-        android:label="fragment_profile_management"
-        tools:layout="@layout/fragment_profile_management" >
+        android:label="fragment_profile_management">
         <action
             android:id="@+id/action_profileManagementFragment_to_buyerMypageFragment"
             app:destination="@id/buyerMypageFragment" />
@@ -470,8 +446,7 @@
     <fragment
         android:id="@+id/orderManagementFragment"
         android:name="likelion.project.agijagi.sellermypage.OrderManagementFragment"
-        android:label="fragment_order_management"
-        tools:layout="@layout/fragment_order_management" >
+        android:label="fragment_order_management" >
         <action
             android:id="@+id/action_orderManagementFragment_to_orderManagementDetailFragment"
             app:destination="@id/orderManagementDetailFragment" />
@@ -482,8 +457,7 @@
     <fragment
         android:id="@+id/orderManagementDetailFragment"
         android:name="likelion.project.agijagi.sellermypage.OrderManagementDetailFragment"
-        android:label="fragment_order_management_detail"
-        tools:layout="@layout/fragment_order_management_detail" >
+        android:label="fragment_order_management_detail">
         <action
             android:id="@+id/action_orderManagementDetailFragment_to_orderManagementFragment"
             app:destination="@id/orderManagementFragment" />
@@ -526,6 +500,48 @@
         <action
             android:id="@+id/action_shippingUpdateFragment_to_shippingManagementFragment"
             app:destination="@id/shippingManagementFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signupBuyerFragment"
+        android:name="likelion.project.agijagi.signup.SignupBuyerFragment"
+        android:label="fragment_signup_buyer"
+        tools:layout="@layout/fragment_signup_buyer" >
+        <action
+            android:id="@+id/action_signupBuyerFragment_to_signupSelectFragment"
+            app:destination="@id/signupSelectFragment" />
+        <action
+            android:id="@+id/action_signupBuyerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+        <fragment
+            android:id="@+id/loginFragment"
+            android:name="likelion.project.agijagi.login.LoginFragment"
+            android:label="fragment_login"
+            tools:layout="@layout/fragment_login">
+            <action
+                android:id="@+id/action_loginFragment_to_sellerMypageFragment"
+                app:destination="@id/sellerMypageFragment" />
+            <action
+                android:id="@+id/action_loginFragment_to_homeFragment"
+                app:destination="@id/homeFragment" />
+            <action
+                android:id="@+id/action_loginFragment_to_signupSelectFragment"
+                app:destination="@id/signupSelectFragment" />
+        </fragment>
+
+    <fragment
+        android:id="@+id/signupSellerFragment"
+        android:name="likelion.project.agijagi.signup.SignupSellerFragment"
+        android:label="fragment_signup_seller"
+        tools:layout="@layout/fragment_signup_seller" >
+        <action
+            android:id="@+id/action_signupSellerFragment_to_signupSelectFragment"
+            app:destination="@id/signupSelectFragment" />
+        <action
+            android:id="@+id/action_signupSellerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 
 </navigation>
