--- a/agijagi/app/src/main/res/layout/fragment_notification_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_notification_list.xml
@@ -33,9 +33,10 @@
         android:id="@+id/recyclerView_notificationList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/layout_notificationList_bottomButton"
-        app:layout_constraintTop_toBottomOf="@+id/materialToolbar_notification_List"/>
+        app:layout_constraintTop_toBottomOf="@+id/materialToolbar_notification_List" />
 
     <LinearLayout
         android:id="@+id/layout_notificationList_bottomButton"
@@ -58,7 +59,7 @@
 
         <Space
             android:layout_width="4dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_notificationList_delete"
