--- a/agijagi/app/src/main/res/layout/fragment_shipping_update.xml
+++ b/agijagi/app/src/main/res/layout/fragment_shipping_update.xml
@@ -24,7 +24,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        app:boxStrokeColor="@color/jagi_brown"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_shipping_update">
 
@@ -32,7 +31,6 @@
             android:id="@+id/editinput_shipping_update_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/narrow_box_rounded_button_stroke"
             android:hint="배송지명" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -43,7 +41,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:boxStrokeColor="@color/jagi_brown"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_update_title">
 
@@ -51,7 +48,6 @@
             android:id="@+id/editinput_shipping_update_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/narrow_box_rounded_button_stroke"
             android:hint="배송지주소" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,7 +58,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:boxStrokeColor="@color/jagi_brown"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_update_address">
 
@@ -70,7 +65,6 @@
             android:id="@+id/editinput_shipping_update_address_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/narrow_box_rounded_button_stroke"
             android:hint="상세주소" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +75,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:boxStrokeColor="@color/jagi_brown"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_update_address_detail">
 
@@ -89,7 +82,6 @@
             android:id="@+id/editinput_shipping_update_recipient"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/narrow_box_rounded_button_stroke"
             android:hint="수령인" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,7 +92,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:boxStrokeColor="@color/jagi_brown"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_update_recipient">
 
@@ -108,7 +99,6 @@
             android:id="@+id/editinput_shipping_update_recipient_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/narrow_box_rounded_button_stroke"
             android:hint="수령인 연락처" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -137,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/wide_box_bottom_active"
-        android:text="등록"
+        android:text="수정"
         android:textColor="@color/jagi_hint_color"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent" />
