--- a/agijagi/app/src/main/res/layout/fragment_order_management_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_order_management_detail.xml
@@ -7,7 +7,7 @@
     tools:context=".sellermypage.OrderManagementDetailFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_order_detail"
+        android:id="@+id/toolbar_order_management_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AgijagiToolbar"
@@ -31,7 +31,7 @@
         android:textAppearance="@style/TextAppearance.Material3.BodySmall"
         android:textColor="@color/jagi_ivory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_order_detail" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_order_management_detail" />
 
     <ScrollView
         android:layout_width="0dp"
