--- a/agijagi/app/src/main/res/values/array.xml
+++ b/agijagi/app/src/main/res/values/array.xml
@@ -78,6 +78,7 @@
     <array name="product_list_status">
         <item>판매</item>
         <item>품절</item>
+        <item>숨김</item>
     </array>
 
 </resources>
