--- a/agijagi/app/src/main/res/drawable/shopping_list_circle_checkbox_selector.xml
+++ b/agijagi/app/src/main/res/drawable/shopping_list_circle_checkbox_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:drawable="@drawable/check_circle_24px" android:state_checked="true" />
+    <item android:drawable="@drawable/adjust_24px" app:state_indeterminate="true" />
     <item android:drawable="@drawable/radio_button_unchecked_24px" />
 </selector>
