--- a/agijagi/app/src/main/res/layout/fragment_search.xml
+++ b/agijagi/app/src/main/res/layout/fragment_search.xml
@@ -71,8 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal" />
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
 
