--- a/agijagi/app/src/main/res/layout/fragment_search.xml
+++ b/agijagi/app/src/main/res/layout/fragment_search.xml
@@ -44,7 +44,8 @@
             android:id="@+id/linearlayout_search_recent_searches"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <TextView
                 android:layout_width="match_parent"
@@ -67,12 +68,19 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_search_search_result"
+        android:id="@+id/recyclerview_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal" />
+        android:visibility="gone" />
+
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+    <!--        android:id="@+id/recyclerview_search_search_result"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginHorizontal="12dp"-->
+    <!--        android:layout_marginTop="16dp" />-->
 
 </LinearLayout>
 
