--- a/agijagi/app/src/main/res/layout/fragment_search.xml
+++ b/agijagi/app/src/main/res/layout/fragment_search.xml
@@ -67,11 +67,20 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textview_search_no_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:text="연관 검색어가 없습니다."
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:visibility="gone" />
 
