Feat: signup, login, logout #146
signup, login, logout 기능 추가, ui 변경

--- a/agijagi/app/src/main/res/layout/fragment_google_signup_buyer.xml
+++ b/agijagi/app/src/main/res/layout/fragment_google_signup_buyer.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="@color/jagi_ivory"
     android:orientation="vertical"
-    tools:context=".signup.SignupGoogleSellerFragment">
+    tools:context=".signup.ui.SignupGoogleBuyerFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_google_signup_seller_toolbar"
+        android:id="@+id/toolbar_google_signup_buyer_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AgijagiToolbar"
@@ -23,7 +23,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/linearlayout_google_signup_seller_layout_inside"
+                android:id="@+id/linearlayout_google_signup_buyer_layout_inside"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -35,7 +35,11 @@
                     android:id="@+id/editinputlayout_google_signup_buyer_nickname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="4"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -43,7 +47,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="닉네임"
-                        android:textColorHint="@color/transparency" />
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -59,7 +63,7 @@
                     android:layout_height="wrap_content">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button_google_signup_seller_complete"
+                        android:id="@+id/button_google_signup_buyer_complete"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:text="가입하기"
