--- a/agijagi/app/src/main/res/layout/fragment_custom_option.xml
+++ b/agijagi/app/src/main/res/layout/fragment_custom_option.xml
@@ -143,7 +143,6 @@
                     android:textSize="16sp" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/edit_input_layout_custom_option"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
@@ -154,7 +153,7 @@
                     app:layout_constraintTop_toBottomOf="@id/textview_volume_text">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_layout_custom_option_text"
+                        android:id="@+id/edit_input_custom_option_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="ex) 멋쟁이(초록) + 사자(주황) + 부트(검정)" />
@@ -170,7 +169,6 @@
                     android:textSize="16sp" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/edit_input_layout_custom_option_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
@@ -182,7 +180,7 @@
                     app:layout_constraintTop_toBottomOf="@id/textview_volume_text">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_layout_custom_option_location_text"
+                        android:id="@+id/edit_input_custom_option_location_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="ex) 왼쪽 위 + 오른쪽 위 + 오른쪽 아래" />
@@ -199,11 +197,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/layout_custom_print_option"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -216,7 +214,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="12dp"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
@@ -245,7 +243,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
@@ -291,7 +289,6 @@
                 android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_input_layout_custom_option_volume_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -303,7 +300,7 @@
                 app:layout_constraintTop_toBottomOf="@id/textview_volume_text">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_input_layout_ready_made_option_text"
+                    android:id="@+id/edit_input_custom_option_volume_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
